--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,11 @@
 }
 
 .shadow {
+  color: green;
   text-shadow: 0px 1px 15px rgba(255, 255, 255, 1);
   font-weight: bold;
+  font-family: 'Capitaly Script PERSONAL USE', sans-serif;
+                                                
 }
 
 .imgDet {
@@ -34,11 +37,17 @@
   background-repeat: no-repeat;
   background-size: 100%;
   color: aliceblue;
-  height: 30vh;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.fixed{
+  position: fixed;
+  width: 100%;
+  z-index: 9999;
 }
 
 .linea {
